--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "pg": "^8.7.1"
